Fix animation lag for projects section on mobile

--- a/src/styles/projects/project-box.css
+++ b/src/styles/projects/project-box.css
@@ -110,6 +110,7 @@
 @media (max-width: 768px) {
   .project-box {
     max-width: 100%;
+    transform: translateX(0);
   }
 
   .project-box_image img,
